--- a/DesignerRHN/DesignerRHN-war/web/PerTelefono.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/PerTelefono.xhtml
@@ -15,12 +15,12 @@
 
                         <h:outputText style="position: absolute; left: 390px; top: 50px; position: absolute; color: red; font-weight: bold; width: 285px; text-align: right; " id="nombreEmpleado" value="#{controlPerTelefonos.persona.nombreCompleto}"/>
 
-                        <fieldset style="position: absolute; left: 10px; top: 70px; font-size: 10px; width: 840px; height: 320px; border-radius: 10px; ">
+                        <fieldset style="position: absolute; left: 5px; top: 70px; font-size: 10px; width: 840px; height: 320px; border-radius: 10px; ">
                             <legend style="font-size: 13px; color: #14388B"><strong>Telefonos donde ubicar al empleado</strong></legend>
 
                             <p:dataTable id="datosTelefonosPersona" var="telefono" value="#{controlPerTelefonos.listaTelefonos}"
-                                         rowKey="#{telefono.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px; text-align: left"                           
-                                         paginator="true" rows="7" filteredValue="#{controlPerTelefonos.filtradosListaTelefonos}" 
+                                         rowKey="#{telefono.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px; text-align: left; width: 845px"                           
+                                         scrollable="true"  scrollWidth="847" scrollHeight="180" paginator="true" rows="7" filteredValue="#{controlPerTelefonos.filtradosListaTelefonos}" 
                                          emptyMessage="No se encontrarón resultados para la búsqueda"
                                          editable="true" editMode="cell">
 
@@ -62,7 +62,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooTipoTelefono" value="Tipo Telefono"/>
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooTipoTelefono" value="Tipo Telefono" action="tipotelefono"/>
                                     </f:facet>
                                 </p:column>
 
@@ -94,7 +94,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooCiudad" value="Ciudad"/>
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooCiudad" value="Ciudad" action="ciudad"/>
                                     </f:facet>
                                 </p:column> 
                             </p:dataTable>  
@@ -145,9 +145,9 @@
                             </p:toolbarGroup>  
                         </p:toolbar>
 
-                        <p:commandButton style="position: absolute; left: 522px; top: 410px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-check" id="ACEPTAR" value="Aceptar" onclick="confirmarGuardar.show();" update=":form:datosTelefonosPersona" process="@this" />
+                        <p:commandButton style="position: absolute; left: 700px; top: 410px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-check" id="ACEPTAR" value="Aceptar" onclick="confirmarGuardar.show();" update=":form:datosTelefonosPersona" process="@this" />
                         <p:commandButton style="position: absolute; left: 15px; top: 410px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-refresh" id="REFRESCAR" value="Refrescar" actionListener="#{controlPerTelefonos.cancelarModificacion()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 605px; top: 410px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras" actionListener="#{controlPerTelefonos.salir()}" action="nomina" process="@this" />
+                        <p:commandButton style="position: absolute; left: 783px; top: 410px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras" actionListener="#{controlPerTelefonos.salir()}" action="individual" process="@this" />
 
                     </p:panel> 
                 </h:form>
