--- a/DesignerRHN/DesignerRHN-war/web/perdireccion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/perdireccion.xhtml
@@ -21,9 +21,11 @@
 
                             <p:dataTable id="datosDireccionesPersona" var="direccion" value="#{controlPerDirecciones.listaDirecciones}"
                                          rowKey="#{direccion.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px; text-align: left"                           
-                                         scrollable="true" scrollHeight="200" scrollWidth="840" filteredValue="#{controlPerDirecciones.filtradosListaDirecciones}" 
+                                         scrollable="true" scrollHeight="150" scrollWidth="840" filteredValue="#{controlPerDirecciones.filtradosListaDirecciones}" 
                                          emptyMessage="No se encontrarón resultados para la búsqueda"
-                                         editable="true" editMode="cell">
+                                         editable="true" editMode="cell" paginator="true" rows="5"
+                                         paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
+>
 
                                 <p:ajax event="filter" listener="#{controlPerDirecciones.eventoFiltrar()}"/>
 
@@ -276,7 +278,7 @@
 
                         <p:commandButton style="position: absolute; left: 700px; top: 380px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-check" id="ACEPTAR" value="Aceptar" onclick="confirmarGuardar.show();" update=":form:datosDireccionesPersona" process="@this" />
                         <p:commandButton style="position: absolute; left: 25px; top: 380px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-refresh" id="REFRESCAR" value="Refrescar" actionListener="#{controlPerDirecciones.cancelarModificacion()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 785px; top: 380px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras" actionListener="#{controlPerDirecciones.salir()}" action="nomina" process="@this" /> 
+                        <p:commandButton style="position: absolute; left: 785px; top: 380px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras" actionListener="#{controlPerDirecciones.salir()}" action="individual" process="@this" /> 
 
 
                     </p:panel>
